src/styles.scss
@import 'bulma/bulma.scss';
@import 'xterm/css/xterm.css';

:root {
    // Start override definitions
    --bg-color-override: var(--vscode-editor-background);

    // Non-theme globals
    --monospace: var(--vscode-editor-font-family, monospace);

    // Start light theme
    --bg-color: var(--bg-color-override, white);
    --scrollbar-color: #ddd;
    --is-dark: 0;

    --console-selection-color: rgba(0, 0, 0, 0.1);

    --cap-interest-color: #ccffcc;
    --cap-data-color: #ffcccc;
    --cap-selection-color: blueviolet;

    --vis-tlv-border: 2px solid black;
    --vis-red: red;
    --vis-blue: blue;
    --vis-green: green;
    --vis-gray: gray;
    --vis-hover: rgba(255, 255, 0, 0.3);
}

@mixin dark-theme {
    --bg-color: var(--bg-color-override, #141414);
    --scrollbar-color: #444;
    --is-dark: 1;

    --console-selection-color: rgba(255, 255, 255, 0.1);

    --cap-interest-color: #003300;
    --cap-data-color: #330000;
    --cap-selection-color: rebeccapurple;

    --vis-tlv-border: 1px solid #aaa;
    --vis-red: #DCDCAA;
    --vis-blue: deepskyblue;
    --vis-green: limegreen;
    --vis-gray: darkgray;
    --vis-hover: rgba(0, 0, 255, 0.3);
}

@media (prefers-color-scheme: dark) {
    :root:not([data-theme=light]) {
        @include dark-theme;
    }
}

:root[data-theme=dark] {
    @include dark-theme;
}

body, html {
    margin: 0 !important;
    padding: 0 !important;
    overflow: hidden;
    background-color: var(--bg-color);
}

*::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}
*::-webkit-scrollbar-track {
    background: var(--bg-color);
}
*::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-color);
}

// Only for firefox, use sparingly
pre, .thin-scrollbar {
    scrollbar-width: thin;
    scrollbar-color: var(--scrollbar-color) var(--bg-color);
}

/** Reset bulma styles for code editor (monaco) */
.code-editor {
    .title, .title:not(:last-child)  {
        all: unset;
    }
}

/** Global utilities **/
.full-width {
    width: 100%;
}
.full-height {
    height: 100%;
}
.full-vh {
    height: 100vh;
}

.main-tab {
    height: 100%; width: 100%;
    background-color: var(--bg-color);
}

.tab-container {
    height: 100%;
    width: 100%;
}

.tab-full-height {
    height: 100%;
    overflow-y: auto;
}

/** Compat with bulma 0.9 */
.field {
    margin-bottom: 0.75rem;
}
.button {
    --bulma-button-weight: var(--bulma-weight-normal) !important;
}

// VisJS manipulation controls styles
.vis-button {
    filter: invert(var(--is-dark));
}
.vis-manipulation {
    background: var(--bg-color) !important;
    border: none !important;

    .vis-separator-line {
        display: none;
    }
}

// Checkbox styling (why doesn't bulma do this?)
input[type="checkbox"] {
    appearance: none;
    outline: none;
    border: 1px solid #ccc;
    border-radius: 2px;
    cursor: pointer;
    transition: all 0.3s;
    margin-right: 2px;

    // size and positioning
    padding: 0.4em;
    transform: translateY(0.1em);
    vertical-align: top;

    &:checked {
        background-color: #007bff;
        border-color: #007bff;
        color: white;
    }
}

